# BasicApp

./: .gitignore  docker-compose.yml  pyproject.toml
fastapi-app/: .env.template  main.py
fastapi-app/actions/: create_superuser.py
fastapi-app/alembic/versions/: 2024_10_23_1003-fbfa998a3a03_create_users_table.py  2024_10_26_2235-19fbb4b5a8aa_create_access_tokens_table.py  2024_11_03_2233-2c0c1fed234f_fix_user_and_token_tables.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  auth.py  messages.py  some_api.py  users.py
fastapi-app/api/api_v1/crud/: some_obj.py
fastapi-app/api/dependencies/: backend.py  strategy.py  users.py
fastapi-app/api/dependencies/authentication/: access_tokens.py  backend.py  fastapi_users.py  strategy.py  user_manager.py
fastapi-app/core/: config.py
fastapi-app/core/authentication/: transport.py  user_manager.py
fastapi-app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-app/core/schemas/: some_schema.py  user.py
fastapi-app/core/types/: user_id.py
